# dloct-thesis

./: .gitignore  main.py  power_spectrum.ipynb  power_spectrum_phantom.ipynb  pyproject.toml
notebooks/: lateral_subsampling_demo.ipynb
src/: lateral_sampling.py  prepare_dataset.py
src/models/: difussion.py
