[project]
name = "dloct"
version = "0.1.0"
description = "Physics-Informed Deep Learning for OCT Lateral Super-Resolution"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "torchaudio>=2.11.0",
    "apex>=0.9.10.dev0",
    "einops>=0.8.2",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]
